# CHmath

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  README.md
include/chmath/: chmath.hpp  common.hpp
src/: chmath.cpp  chmath.cppm  plot.cppm  table.cppm
tests/: CMakeLists.txt
tests/main/: CMakeLists.txt  main.cpp
tests/plotting/: CMakeLists.txt  plotting.cpp
tests/table/: CMakeLists.txt  table.cpp
